--- a/BIB/bibM.bib
+++ b/BIB/bibM.bib
@@ -8,7 +8,10 @@
   booktitle = {Jeux, gestes et savoirs},
   language  = {fr},
   pusblisher={C&F Editions},
-  collection={Collection du nouveau monde industriel}
+  collection={Collection du nouveau monde industriel},
+  page ={87-98},
+  abstract={La dix-septième édition des Entretiens du Nouveau Monde Industriel apporte un éclairage théorique, historique et épistémologique sur le pouvoir du jeu. Cet ouvrage mobilise les apports théoriques des sciences du vivant, de la psychologie, de l'économie, de la philosophie ou des sciences du jeu, aussi bien que des comptes-rendus d'expérimentations de terrain.},
+  isbn={9782376620891}
 }
 
 
@@ -99,20 +102,20 @@ pas de soi » mais « vient de l’autre, ou relève de l’autre en lui ».},
 
 
 @InBook{2023-Montevil-Mathematical-Modeling-organisms,
-  author    = {Montévil, Maël},
-  editor    = {Bizzarri, Mariano},
- title     = {Mathematical modeling in the study of organisms and their parts},
-  year      = {2024},
-  month={01},
-  day={26},
-  series    = {Methods in Molecular Biology},
-  abstract  = {Mathematical modeling is a very powerful tool to understand natural phenomena. Such a tool carries its own assumptions and should always be used critically. In this chapter we highlight the key ingredients and steps of modeling and focus on their biological interpretation. In particular, we discuss the role of theoretical principles in writing models. We also highlight the meaning and interpretation of equations. The main aim of this chapter is to facilitate the interaction between biologists and mathematical modelers. We focus on the case of cell proliferation and motility in the context of multicellular organisms.},
-  booktitle = {Systems Biology 2nd edition},
-  keywords  = {Equations, Mathematical modeling, Parameters, Proliferation, Theory},
-  language  = {en},
-  url={https://link.springer.com/book/9781071635766},
-  isbn={9781071635766}
+author="Mont{\'e}vil, Ma{\"e}l",
+editor="Bizzarri, Mariano",
+title="Mathematical Modeling in the Study of Organisms and Their Parts",
+bookTitle="Systems Biology",
+year="2024",
+publisher="Springer US",
+address="New York, NY",
+pages="105--119",
+abstract="Mathematical modeling is a very powerful tool to understand natural phenomena. Such a tool carries its own assumptions and should always be used critically. In this chapter we highlight the key ingredients and steps of modeling and focus on their biological interpretation. Particularly, we discuss the role of theoretical principles in writing models. We also highlight the meaning and interpretation of equations. The main aim of this chapter is to facilitate the interaction between biologists and mathematical modelers. We focus on the case of cell proliferation and motility in the context of multicellular organisms.",
+isbn="978-1-0716-3577-3",
+doi="10.1007/978-1-0716-3577-3_7",
+url="https://doi.org/10.1007/978-1-0716-3577-3_7"
 }
+
 
 
 @InBook{2023-Montevil-chance-hasard-biologie,
